syntax = "proto3";
option csharp_namespace = "CraftAI.Gate.Service";
package craftai.entity;
// The greeting service definition.
message Chunk16x16x16 {
	int32 x = 1;
	int32 y = 2;
	int32 z = 3;
	repeated int32 blockType = 4; 
}